--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -36,15 +36,24 @@ jobs:
       - name: Run Golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.50.0 # Use a specific version for reproducibility
+          version: v1.50.0
 
       - name: Build the binary
         run: |
           go build -o ./bin/app .
 
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Upload release asset
         uses: actions/upload-release-asset@v3
+        id: upload-release-asset
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This will be set by the create_release step
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./bin/app
-          asset_name: app-${{ github.run_id }}-${{ github.sha }}.exe 
+          asset_name: app-${{ github.run_id }}-${{ github.sha }}.exe
