--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.20
+          go-version: 1.23
 
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -38,7 +38,7 @@ jobs:
       - name: Run Golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.50.0 # Use a specific version for reproducibility
+          version: v1.50.0
 
       - name: Build the binary
         run: |
