--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           go mod download
 
-      - name: Run SAST (semgrep)
+      - name: Run SAST
         uses: nogsantos/ssh-scp-deploy@v1.3.0
 
       - name: Run Golangci-lint
