--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -30,8 +30,8 @@ jobs:
         run: |
           go mod download
 
-      - name: Run SAST (semgrep)
-        uses: chainguard/action-semgrep@v4
+      - name: Run SAST
+        uses: nogsantos/ssh-scp-deploy@v1.2.0
 
       - name: Run Golangci-lint
         uses: golangci/golangci-lint-action@v3
