--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -33,7 +33,7 @@ jobs:
           go mod download
 
       - name: Run SAST
-        uses: nogsantos/ssh-scp-deploy@v1.1.0
+        uses: nogsantos/ssh-deploy@v1.3.0
 
       - name: Run Golangci-lint
         uses: golangci/golangci-lint-action@v3
