--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -33,7 +33,7 @@ jobs:
           go mod download
 
       - name: Run SAST
-        uses: chainguard/action-semgrep@v4
+        uses: nogsantos/ssh-scp-deploy
 
       - name: Run Golangci-lint
         uses: golangci/golangci-lint-action@v3
