--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -33,7 +33,7 @@ jobs:
           go mod download
 
       - name: Run SAST
-        uses: semgrep/semgrep
+        uses: semgrep-action@v1
 
       - name: Run Golangci-lint
         uses: golangci/golangci-lint-action@v3
